# stk_min

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  PUBLICATION_CHECKLIST.md  README.md  build.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/stk_min/: StkMinPlugin.kt
android/src/test/kotlin/com/example/stk_min/: StkMinPluginTest.kt
assets/rawwaves/: tabla_ghe.raw  tabla_na.raw  tabla_tak.raw  tabla_tee.raw
example/: README.md  build_log.txt  main.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  pubspec.yaml
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/: stk_min.podspec
ios/Classes/: StkMinPlugin.swift
lib/: drummer.dart  modal_bar.dart  saxophone.dart  shakers.dart  stk_min.dart  stk_min_method_channel.dart  stk_min_platform_interface.dart
linux/: CMakeLists.txt  Makefile  build.sh  build.yaml  stk_min_plugin.cc  stk_min_plugin_private.h
linux/test/: stk_min_plugin_test.cc
macos/: stk_min.podspec
macos/Classes/: StkMinPlugin.swift
src/: Drummer.cpp  Drummer.h  Saxophone.cpp  Saxophone.h  StkMini.cpp
test/: stk_min_method_channel_test.dart  stk_min_test.dart
windows/: CMakeLists.txt  stk_min_plugin.cpp  stk_min_plugin.h  stk_min_plugin_c_api.cpp
windows/test/: stk_min_plugin_test.cpp
(+19 files in other folders)
